<resources>
    <string name="app_name">Notes.</string>
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="loginButton">Log In</string>
    <string name="signUpButton">Sign Up</string>
    <string name="signUpText">Not a member? Sign Up</string>
    <string name="logInText">Already a member? Log In</string>
    <string name="menuSettings">Settings</string>
    <string name="menuSearch">Search</string>
    <string name="menuEdit">Edit</string>
    <string name="menuTag">Tags</string>
    <string name="menuLogout">Log Out</string>
    <string name="userAlreadyExists">This username already exists</string>
    <string name="incorrectPassword">Wrong username and password</string>
    <string name="userSuccessfullyRegistered">You have been successfully registered</string>
    <string name="menuDelete">Delete</string>
    <string name="fileNotFound">File not found or error opening it</string>
    <string name="menuSendEmail">Email it</string>
    <string name="menuUploadToDrive">Upload text to Google Drive</string>
    <string name="noteSuccessfullyDeleted">The note has been successfully deleted</string>
    <string name="chooseEmailClient">Choose email application</string>
    <string name="noAppForThis">No app for this action can be found</string>
    <string name="failCreatingNote">The note could not be created</string>
    <!-- Modal delete note -->
    <string name="deleteNote_title">Delete note</string>
    <string name="deleteNote_body">Are you sure you want to delete this note?</string>
    <string name="deleteNote_positive">Yes</string>
    <string name="deleteNote_negative">Cancel</string>
    <!-- fin -->
    <string name="deleteStyles_title">Format text</string>
    <string name="deleteStyles_body">Are you sure you want to format this text?</string>
    <string name="successCreatingNote">Note successfully created</string>
    <string name="boldText">Bold</string>
    <string name="italicText">Italic</string>
    <string name="linkText">Link</string>
    <string name="formatText">Format</string>
    <string name="editorTitle">Title</string>
    <string name="editorBody">Body text</string>
    <string name="editorAddTag">Add Tag</string>
    <string name="failBoldText">Select a word first</string>
    <string name="textToShowLabel">Text to show</string>
    <string name="linkLabel">Url</string>
    <string name="insertLink_save">Save</string>
    <string name="insertLink_cancel">Cancel</string>
    <string name="insertLink_title">Insert a link</string>
    <string name="addTag_title">Select a tag</string>
    <string name="failChooseTag">You must select a tag to save it</string>
    <string name="addTag_newTag">Add new</string>
    <string name="confirmExit_title">Are you sure you want to exit?\nYou will lose any unsaved changes</string>
    <string name="confirmExit_yes">Yes</string>
    <string name="confirmExit_no">No</string>
    <string name="tagNameLabel">Tag name</string>
    <string name="newTag_title">Add new tag</string>
    <string name="menuSave">Save</string>
    <string name="failSavingNote">There was an error saving this note</string>
    <string name="failSavingNote_titleEmpty">The title of the note cannot be empty</string>
    <string name="failSavingNote_bodyEmpty">The body of the note cannot be empty</string>
    <string name="successEditingNote">The note was successfully modified</string>
    <string name="addRemoveTag_remove">Delete</string>
    <string name="addRemoveTag_title">Delete tags</string>
    <string name="preferences_basicConfiguration">Basic configuration</string>
    <string name="preferences_notificationsTitle">Notifications</string>
    <string name="preferences_notificationsSummary">Receive a notification when creating a new note</string>
    <string name="preferences_ordenTitle">Show recent first</string>
    <string name="preferences_ordenSummary">Show first the most recent notes</string>
    <string name="preferences_saved">The new configuration has been saved</string>
    <string name="preferences_LanguageTitle">Select the language</string>
    <string name="preferences_LanguageSummary">Change the app language</string>
    <string name="notifications_preferencesNotifications_title">Notifications are enabled</string>
    <string name="notifications_preferencesNotifications_text">You will receive notifications for new notes</string>
    <string name="notifications_newNote_title">New note</string>
    <string name="notifications_newNote_seeNote">See it</string>
    <string name="failTagExists">This tag already exists</string>
    <string name="databaseError">There was an error with the database</string>
    <string name="emptyTag">The tag field cannot be empty</string>
    <string name="failDeletingNote">There was an error deleting the note</string>
    <string name="preferences_languagesOptionSystem">System</string>
    <string name="preferences_languagesOptionEnglish">English</string>
    <string name="preferences_languagesOptionSpanish">Spanish</string>
    <string name="googleDriveLogInError">There was an error trying to log in in Google Drive</string>
    <string name="googleDrivePermissionError">There was an error trying to obtain the permissions</string>
    <string name="googleDriveNoteUploadError">There was an error trying to upload the note</string>
    <string name="noteIsBeingUploaded">Wait until the current note has been uploaded</string>
    <string name="noteUploadComplete">The note has been uploaded to Google Drive</string>
    <string name="noteUploadFail">There was a problem trying to upload the note</string>
    <string name="noteUpload">Uploading the note to Google Drive</string>
    <string name="googlePlayNeeded">You need to install Google Play for this functionality to work</string>
    <string name="serverError">There was an error when trying to connect to the server</string>
    <string name="loadingTitle">Loading</string>
    <string name="loadingBody">Please wait a moment…</string>
    <string name="choose">Please, choose one…</string>
    <string name="chooseNote">Create new note</string>
    <string name="chooseQuickNote">Write quick note</string>
    <string name="imageError">Image error</string>
    <string name="enterMessage">Enter the note…</string>
    <string name="sendMessage">Send</string>
    <string name="errorSendingMessage">There was an error trying to send the message</string>
    <string name="menuCamera">Add photo</string>
    <string name="errorTakingPicture">There was an error taking the picture</string>
    <string name="fcmNotAvailable">You won\'t be notified of new short messages because of background tasks are disabled</string>
    <string name="menuRefreshSelfMessages">Refresh</string>
    <string name="menuCalendar">Add to Calendar</string>
    <string name="noteAddedToCalendar">Note added to calendar</string>
    <string name="noteAddedToCalendarError">There was a problem trying to add the note to the calendar</string>
    <string name="preferences_mapsTitle">Save notes location</string>
    <string name="preferences_mapsSummary">Save the last known location</string>
    <string name="menuMaps">See map with notes</string>
    <string name="errorMaps">There was an error trying to get the last location</string>
    <string name="loadButton">Reload</string>

</resources>
