<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuEdit"
        android:icon="@drawable/ic_edit"
        android:title="@string/menuEdit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/menuDelete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuSendEmail"
        android:icon="@drawable/ic_email"
        android:title="@string/menuSendEmail"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuUploadToDrive"
        android:icon="@drawable/ic_upload"
        android:title="@string/menuUploadToDrive"
        app:showAsAction="ifRoom" />

</menu>